Spatial data extraction and vis is complete.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,5 +9,7 @@ export(taxonomy_handler)
 exportMethods(coverage_extract)
 import(alphahull)
 import(httr)
+import(mapdata)
+import(maps)
 import(mclust)
 import(taxize)
