- fixed exporting elevation fxn - temporal coverage is now properly implemented.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(points_to_poly)
 export(taxonomy_handler)
 exportMethods(coverage_extract)
 import(alphahull)
+import(dplyr)
 import(httr)
 import(mapdata)
 import(maps)
